--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,4 +43,4 @@ repos:
     hooks:
     -   id: flake8
         exclude: __init__.py
-        args: [ "--ignore=E501" ]
+        args: [ "--ignore=E501,F821" ]
