--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
     rev: 5.10.1
     hooks:
       - id: isort
-        skip: __init__.py
+        exclude: __init__.py
         args: [ --profile, black, --filter-files ]
 
 # Добавляет пропущенные запятые
