--- a/src/core/config.local.yaml
+++ b/src/core/config.local.yaml
@@ -7,15 +7,15 @@ app:
   db_exclude_tables: []
 
 postgres:
-  host: menu_postgres_db
+  host: localhost
   port: 5432
   dbname: my_menu
   user: my_menu
   password: my_menu
-  async_dsn: postgresql+asyncpg://my_menu:my_menu@menu_postgres_db:5432/my_menu
+  async_dsn: postgresql+asyncpg://my_menu:my_menu@localhost:5432/my_menu
 
 redis:
-  host: menu_redis
+  host: localhost
   port: 6379
   db: 0
   encoding: utf-8
