--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,27 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      TEST: 1
     strategy:
       matrix:
         python-version: [ "3.10" ]
-
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_DB: test
-          POSTGRES_PASSWORD: test
-          POSTGRES_USER: test
-        ports:
-          - 5432:5432
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 5s
-          --health-timeout 20s
-          --health-retries 100
 
     steps:
       - uses: actions/checkout@v2
@@ -41,7 +23,7 @@ jobs:
         run: |
           pip install poetry
           poetry install --no-interaction --no-ansi --no-root
-      - name: migrations
-        run: poetry run alembic upgrade head
-      - name: run tests
-        run: make test
+#      - name: migrations
+#        run: poetry run alembic upgrade head
+#      - name: run tests
+#        run: make test
