--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,8 @@ repos:
     -   id: end-of-file-fixer  # добавляет пустую строку в конце файла
     -   id: check-yaml  # проверяет синтаксис .yaml файлов
     -   id: check-json  # проверяет синтаксис .json файлов
+    -   id: check-case-conflict  # проверяет файлы, которые могут конфликтовать в файловых системах без учета регистра.
+    -   id: check-merge-conflict  # проверяет файлы, содержащие конфликтные строки слияния.
     -   id: double-quote-string-fixer  # заменяет " на '
 
 # Отсортировывает импорты в проекте
@@ -29,7 +31,7 @@ repos:
     rev: v2.31.1
     hooks:
     -   id: pyupgrade
-        args: [--py38-plus]
+        args: [--py310-plus]
 
 # Форматирует код под PEP8
 -   repo: https://github.com/pre-commit/mirrors-autopep8
@@ -44,3 +46,9 @@ repos:
     -   id: flake8
         exclude: __init__.py
         args: [ "--ignore=E501,F821" ]
+
+# Проверка статических типов с помощью mypy
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.991
+    hooks:
+    -   id: mypy
