--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: v4.2.0
     hooks:
     -   id: trailing-whitespace  # убирает лишние пробелы
-    -   id: check-added-large-files  # проверяет тяжелые файлы
+    -   id: check-added-large-files  # проверяет тяжелые файлы на изменения
     -   id: end-of-file-fixer  # добавляет пустую строку в конце файла
     -   id: check-yaml  # проверяет синтаксис .yaml файлов
     -   id: check-json  # проверяет синтаксис .json файлов
